Eat Healthy Website

--- a/index.html
+++ b/index.html
@@ -38,5 +38,49 @@
                 <a class="Order-button" href="#">Contact Me</a>
         </div>
     </section>
+    <section>
+        <div class="My-Recipies">
+            <div>
+                <h1>My Recipies</h1>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br> Lorem Ipsum has been the industry's standard dummy text ever since the <br> 1500s.</p>
+            </div>
+        </div>
+        <div class= "flexible-container">
+            <div class="half-width card">
+                <img src="img/Project Cover.png" alt="Project Cover">
+                <h2>Recipie Title</h2>
+                <p>Lorem Ipsum is simply dummy text of the printing and 
+                    typesetting industry. Lorem Ipsum has been the industry's 
+                    standard dummy text ever since the 1500s</p>
+            </div>
+            <div class="half-width card">
+                <img src="img/Project Cover1.jpg" alt="Project Cover1">
+                <h2>Recipie Title</h2>
+                <p>Lorem Ipsum is simply dummy text of the printing and 
+                    typesetting industry. Lorem Ipsum has been the industry's 
+                    standard dummy text ever since the 1500s</p>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class= "flexible-container">
+            <div>
+                <h1>700k</h1>
+                <p>Youtube Subscriber</p>
+            </div>
+            <div>
+                <h1>2.4m</h1>
+                <p>Instagram Followers</p>
+            </div>
+            <div>
+                <h1>100k</h1>
+                <p>Dribbble Shot Likes</p>
+            </div>
+        </div>
+    </section>
 </body>
+<footer class="footer-area">
+    <h1><span class="orange-color">Eat</span> Fresh</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, dolore?</p>
+</footer>
 </html>
